parser.output
Terminals unused in grammar

    BREAK


State 25 conflicts: 1 shift/reduce
State 26 conflicts: 17 shift/reduce
State 53 conflicts: 20 reduce/reduce
State 117 conflicts: 1 shift/reduce
State 118 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: start program_body

    2 $@1: ε

    3 start: START $@1

    4 program_body: body end

    5 datatype: INT
    6         | FLOAT
    7         | STRING
    8         | BOOL

    9 body: statement ';'

   10 $@2: ε

   11 body: FOR $@2 '(' statement ';' condition ';' statement ')' '{' body '}'

   12 $@3: ε

   13 body: WHILE $@3 '(' condition ')' '{' body '}'

   14 $@4: ε

   15 body: IF $@4 '(' condition ')' '{' body '}' else
   16     | function

   17 $@5: ε

   18 body: PRINTRF $@5 value ';'

   19 $@6: ε

   20 body: ECHOF $@6 multi_value ';'
   21     | NEW_LINE
   22     | SPACE
   23     | body_list

   24 body_list: body_list body
   25          | body

   26 $@7: ε

   27 else: ELSE $@7 '{' body '}'
   28     | ε

   29 condition: value relational_operator value
   30          | condition AND condition
   31          | condition OR condition
   32          | TRUE
   33          | FALSE
   34          | ε

   35 statement: declaration
   36          | assignment
   37          | expression_statement

   38 expression_statement: expression

   39 $@8: ε

   40 declaration: datatype ID $@8 init ';'

   41 $@9: ε

   42 $@10: ε

   43 assignment: ID $@9 ASSIGN $@10 expression
   44           | ID relational_operator expression

   45 init: ASSIGN value
   46     | ε

   47 expression: expression ADD expression
   48           | expression SUBTRACT expression
   49           | expression MULTIPLY expression
   50           | expression DIVIDE expression
   51           | value

   52 relational_operator: LT
   53                    | GT
   54                    | LE
   55                    | GE
   56                    | EQ
   57                    | NE

   58 value: NUMBER
   59      | FLOAT_NUM
   60      | STR
   61      | ID
   62      | function_call

   63 multi_value: value ',' multi_value
   64            | value

   65 function_call: FUNC_NAME '(' param_list_opt ')'

   66 $@11: ε

   67 function: FUNC_DEF FUNC_NAME $@11 '(' param_list_opt ')' return_type_opt '{' body return '}'

   68 $@12: ε

   69 return: RETURN $@12 value ';'

   70 return_type_opt: return_type
   71                | ε

   72 return_type: ':' datatype

   73 param_list_opt: param_list
   74               | ε

   75 param_list: param_list ',' param
   76           | param

   77 param: datatype ID

   78 end: END


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 13 15 65 67
    ')' (41) 11 13 15 65 67
    ',' (44) 63 75
    ':' (58) 72
    ';' (59) 9 11 18 20 40 69
    '{' (123) 11 13 15 27 67
    '}' (125) 11 13 15 27 67
    error (256)
    START <nd_obj> (258) 3
    END <nd_obj> (259) 78
    FUNC_DEF <nd_obj> (260) 67
    FUNC_NAME <nd_obj> (261) 65 67
    ECHOF <nd_obj> (262) 20
    PRINTRF <nd_obj> (263) 18
    RETURN <nd_obj> (264) 69
    FOR <nd_obj> (265) 11
    WHILE <nd_obj> (266) 13
    IF <nd_obj> (267) 15
    ELSE <nd_obj> (268) 27
    TRUE <nd_obj> (269) 32
    FALSE <nd_obj> (270) 33
    NUMBER <nd_obj> (271) 58
    FLOAT_NUM <nd_obj> (272) 59
    ID <nd_obj> (273) 40 43 44 61 77
    ASSIGN <nd_obj> (274) 43 45
    LE <nd_obj> (275) 54
    GE <nd_obj> (276) 55
    EQ <nd_obj> (277) 56
    NE <nd_obj> (278) 57
    GT <nd_obj> (279) 53
    LT <nd_obj> (280) 52
    AND <nd_obj> (281) 30
    OR <nd_obj> (282) 31
    ADD <nd_obj> (283) 47
    SUBTRACT <nd_obj> (284) 48
    DIVIDE <nd_obj> (285) 50
    MULTIPLY <nd_obj> (286) 49
    BREAK <nd_obj> (287)
    STR <nd_obj> (288) 60
    INT <nd_obj> (289) 5
    FLOAT <nd_obj> (290) 6
    STRING <nd_obj> (291) 7
    BOOL <nd_obj> (292) 8
    NEW_LINE <nd_obj> (293) 21
    SPACE <nd_obj> (294) 22


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    program <nd_obj> (48)
        on left: 1
        on right: 0
    start <nd_obj> (49)
        on left: 3
        on right: 1
    $@1 (50)
        on left: 2
        on right: 3
    program_body <nd_obj> (51)
        on left: 4
        on right: 1
    datatype <nd_obj> (52)
        on left: 5 6 7 8
        on right: 40 72 77
    body <nd_obj> (53)
        on left: 9 11 13 15 16 18 20 21 22 23
        on right: 4 11 13 15 24 25 27 67
    $@2 (54)
        on left: 10
        on right: 11
    $@3 (55)
        on left: 12
        on right: 13
    $@4 (56)
        on left: 14
        on right: 15
    $@5 (57)
        on left: 17
        on right: 18
    $@6 (58)
        on left: 19
        on right: 20
    body_list <nd_obj> (59)
        on left: 24 25
        on right: 23 24
    else <nd_obj> (60)
        on left: 27 28
        on right: 15
    $@7 (61)
        on left: 26
        on right: 27
    condition <nd_obj> (62)
        on left: 29 30 31 32 33 34
        on right: 11 13 15 30 31
    statement <nd_obj> (63)
        on left: 35 36 37
        on right: 9 11
    expression_statement <nd_obj> (64)
        on left: 38
        on right: 37
    declaration <nd_obj> (65)
        on left: 40
        on right: 35
    $@8 (66)
        on left: 39
        on right: 40
    assignment <nd_obj> (67)
        on left: 43 44
        on right: 36
    $@9 (68)
        on left: 41
        on right: 43
    $@10 (69)
        on left: 42
        on right: 43
    init <nd_obj> (70)
        on left: 45 46
        on right: 40
    expression <nd_obj> (71)
        on left: 47 48 49 50 51
        on right: 38 43 44 47 48 49 50
    relational_operator <nd_obj> (72)
        on left: 52 53 54 55 56 57
        on right: 29 44
    value <nd_obj> (73)
        on left: 58 59 60 61 62
        on right: 18 29 45 51 63 64 69
    multi_value <nd_obj> (74)
        on left: 63 64
        on right: 20 63
    function_call <nd_obj> (75)
        on left: 65
        on right: 62
    function <nd_obj> (76)
        on left: 67
        on right: 16
    $@11 (77)
        on left: 66
        on right: 67
    return <nd_obj> (78)
        on left: 69
        on right: 67
    $@12 (79)
        on left: 68
        on right: 69
    return_type_opt <nd_obj> (80)
        on left: 70 71
        on right: 67
    return_type <nd_obj> (81)
        on left: 72
        on right: 70
    param_list_opt <nd_obj> (82)
        on left: 73 74
        on right: 65 67
    param_list <nd_obj> (83)
        on left: 75 76
        on right: 73 75
    param <nd_obj> (84)
        on left: 77
        on right: 75 76
    end <nd_obj> (85)
        on left: 78
        on right: 4


State 0

    0 $accept: • program $end

    START  shift, and go to state 1

    program  go to state 2
    start    go to state 3


State 1

    3 start: START • $@1

    $default  reduce using rule 2 ($@1)

    $@1  go to state 4


State 2

    0 $accept: program • $end

    $end  shift, and go to state 5


State 3

    1 program: start • program_body

    FUNC_DEF   shift, and go to state 6
    FUNC_NAME  shift, and go to state 7
    ECHOF      shift, and go to state 8
    PRINTRF    shift, and go to state 9
    FOR        shift, and go to state 10
    WHILE      shift, and go to state 11
    IF         shift, and go to state 12
    NUMBER     shift, and go to state 13
    FLOAT_NUM  shift, and go to state 14
    ID         shift, and go to state 15
    STR        shift, and go to state 16
    INT        shift, and go to state 17
    FLOAT      shift, and go to state 18
    STRING     shift, and go to state 19
    BOOL       shift, and go to state 20
    NEW_LINE   shift, and go to state 21
    SPACE      shift, and go to state 22

    program_body          go to state 23
    datatype              go to state 24
    body                  go to state 25
    body_list             go to state 26
    statement             go to state 27
    expression_statement  go to state 28
    declaration           go to state 29
    assignment            go to state 30
    expression            go to state 31
    value                 go to state 32
    function_call         go to state 33
    function              go to state 34


State 4

    3 start: START $@1 •

    $default  reduce using rule 3 (start)


State 5

    0 $accept: program $end •

    $default  accept


State 6

   67 function: FUNC_DEF • FUNC_NAME $@11 '(' param_list_opt ')' return_type_opt '{' body return '}'

    FUNC_NAME  shift, and go to state 35


State 7

   65 function_call: FUNC_NAME • '(' param_list_opt ')'

    '('  shift, and go to state 36


State 8

   20 body: ECHOF • $@6 multi_value ';'

    $default  reduce using rule 19 ($@6)

    $@6  go to state 37


State 9

   18 body: PRINTRF • $@5 value ';'

    $default  reduce using rule 17 ($@5)

    $@5  go to state 38


State 10

   11 body: FOR • $@2 '(' statement ';' condition ';' statement ')' '{' body '}'

    $default  reduce using rule 10 ($@2)

    $@2  go to state 39


State 11

   13 body: WHILE • $@3 '(' condition ')' '{' body '}'

    $default  reduce using rule 12 ($@3)

    $@3  go to state 40


State 12

   15 body: IF • $@4 '(' condition ')' '{' body '}' else

    $default  reduce using rule 14 ($@4)

    $@4  go to state 41


State 13

   58 value: NUMBER •

    $default  reduce using rule 58 (value)


State 14

   59 value: FLOAT_NUM •

    $default  reduce using rule 59 (value)


State 15

   43 assignment: ID • $@9 ASSIGN $@10 expression
   44           | ID • relational_operator expression
   61 value: ID •

    LE  shift, and go to state 42
    GE  shift, and go to state 43
    EQ  shift, and go to state 44
    NE  shift, and go to state 45
    GT  shift, and go to state 46
    LT  shift, and go to state 47

    ASSIGN    reduce using rule 41 ($@9)
    $default  reduce using rule 61 (value)

    $@9                  go to state 48
    relational_operator  go to state 49


State 16

   60 value: STR •

    $default  reduce using rule 60 (value)


State 17

    5 datatype: INT •

    $default  reduce using rule 5 (datatype)


State 18

    6 datatype: FLOAT •

    $default  reduce using rule 6 (datatype)


State 19

    7 datatype: STRING •

    $default  reduce using rule 7 (datatype)


State 20

    8 datatype: BOOL •

    $default  reduce using rule 8 (datatype)


State 21

   21 body: NEW_LINE •

    $default  reduce using rule 21 (body)


State 22

   22 body: SPACE •

    $default  reduce using rule 22 (body)


State 23

    1 program: start program_body •

    $default  reduce using rule 1 (program)


State 24

   40 declaration: datatype • ID $@8 init ';'

    ID  shift, and go to state 50


State 25

    4 program_body: body • end
   25 body_list: body •

    END  shift, and go to state 51

    END       [reduce using rule 25 (body_list)]
    $default  reduce using rule 25 (body_list)

    end  go to state 52


State 26

   23 body: body_list •
   24 body_list: body_list • body

    FUNC_DEF   shift, and go to state 6
    FUNC_NAME  shift, and go to state 7
    ECHOF      shift, and go to state 8
    PRINTRF    shift, and go to state 9
    FOR        shift, and go to state 10
    WHILE      shift, and go to state 11
    IF         shift, and go to state 12
    NUMBER     shift, and go to state 13
    FLOAT_NUM  shift, and go to state 14
    ID         shift, and go to state 15
    STR        shift, and go to state 16
    INT        shift, and go to state 17
    FLOAT      shift, and go to state 18
    STRING     shift, and go to state 19
    BOOL       shift, and go to state 20
    NEW_LINE   shift, and go to state 21
    SPACE      shift, and go to state 22

    FUNC_DEF   [reduce using rule 23 (body)]
    FUNC_NAME  [reduce using rule 23 (body)]
    ECHOF      [reduce using rule 23 (body)]
    PRINTRF    [reduce using rule 23 (body)]
    FOR        [reduce using rule 23 (body)]
    WHILE      [reduce using rule 23 (body)]
    IF         [reduce using rule 23 (body)]
    NUMBER     [reduce using rule 23 (body)]
    FLOAT_NUM  [reduce using rule 23 (body)]
    ID         [reduce using rule 23 (body)]
    STR        [reduce using rule 23 (body)]
    INT        [reduce using rule 23 (body)]
    FLOAT      [reduce using rule 23 (body)]
    STRING     [reduce using rule 23 (body)]
    BOOL       [reduce using rule 23 (body)]
    NEW_LINE   [reduce using rule 23 (body)]
    SPACE      [reduce using rule 23 (body)]
    $default   reduce using rule 23 (body)

    datatype              go to state 24
    body                  go to state 53
    body_list             go to state 26
    statement             go to state 27
    expression_statement  go to state 28
    declaration           go to state 29
    assignment            go to state 30
    expression            go to state 31
    value                 go to state 32
    function_call         go to state 33
    function              go to state 34


State 27

    9 body: statement • ';'

    ';'  shift, and go to state 54


State 28

   37 statement: expression_statement •

    $default  reduce using rule 37 (statement)


State 29

   35 statement: declaration •

    $default  reduce using rule 35 (statement)


State 30

   36 statement: assignment •

    $default  reduce using rule 36 (statement)


State 31

   38 expression_statement: expression •
   47 expression: expression • ADD expression
   48           | expression • SUBTRACT expression
   49           | expression • MULTIPLY expression
   50           | expression • DIVIDE expression

    ADD       shift, and go to state 55
    SUBTRACT  shift, and go to state 56
    DIVIDE    shift, and go to state 57
    MULTIPLY  shift, and go to state 58

    $default  reduce using rule 38 (expression_statement)


State 32

   51 expression: value •

    $default  reduce using rule 51 (expression)


State 33

   62 value: function_call •

    $default  reduce using rule 62 (value)


State 34

   16 body: function •

    $default  reduce using rule 16 (body)


State 35

   67 function: FUNC_DEF FUNC_NAME • $@11 '(' param_list_opt ')' return_type_opt '{' body return '}'

    $default  reduce using rule 66 ($@11)

    $@11  go to state 59


State 36

   65 function_call: FUNC_NAME '(' • param_list_opt ')'

    INT     shift, and go to state 17
    FLOAT   shift, and go to state 18
    STRING  shift, and go to state 19
    BOOL    shift, and go to state 20

    $default  reduce using rule 74 (param_list_opt)

    datatype        go to state 60
    param_list_opt  go to state 61
    param_list      go to state 62
    param           go to state 63


State 37

   20 body: ECHOF $@6 • multi_value ';'

    FUNC_NAME  shift, and go to state 7
    NUMBER     shift, and go to state 13
    FLOAT_NUM  shift, and go to state 14
    ID         shift, and go to state 64
    STR        shift, and go to state 16

    value          go to state 65
    multi_value    go to state 66
    function_call  go to state 33


State 38

   18 body: PRINTRF $@5 • value ';'

    FUNC_NAME  shift, and go to state 7
    NUMBER     shift, and go to state 13
    FLOAT_NUM  shift, and go to state 14
    ID         shift, and go to state 64
    STR        shift, and go to state 16

    value          go to state 67
    function_call  go to state 33


State 39

   11 body: FOR $@2 • '(' statement ';' condition ';' statement ')' '{' body '}'

    '('  shift, and go to state 68


State 40

   13 body: WHILE $@3 • '(' condition ')' '{' body '}'

    '('  shift, and go to state 69


State 41

   15 body: IF $@4 • '(' condition ')' '{' body '}' else

    '('  shift, and go to state 70


State 42

   54 relational_operator: LE •

    $default  reduce using rule 54 (relational_operator)


State 43

   55 relational_operator: GE •

    $default  reduce using rule 55 (relational_operator)


State 44

   56 relational_operator: EQ •

    $default  reduce using rule 56 (relational_operator)


State 45

   57 relational_operator: NE •

    $default  reduce using rule 57 (relational_operator)


State 46

   53 relational_operator: GT •

    $default  reduce using rule 53 (relational_operator)


State 47

   52 relational_operator: LT •

    $default  reduce using rule 52 (relational_operator)


State 48

   43 assignment: ID $@9 • ASSIGN $@10 expression

    ASSIGN  shift, and go to state 71


State 49

   44 assignment: ID relational_operator • expression

    FUNC_NAME  shift, and go to state 7
    NUMBER     shift, and go to state 13
    FLOAT_NUM  shift, and go to state 14
    ID         shift, and go to state 64
    STR        shift, and go to state 16

    expression     go to state 72
    value          go to state 32
    function_call  go to state 33


State 50

   40 declaration: datatype ID • $@8 init ';'

    $default  reduce using rule 39 ($@8)

    $@8  go to state 73


State 51

   78 end: END •

    $default  reduce using rule 78 (end)


State 52

    4 program_body: body end •

    $default  reduce using rule 4 (program_body)


State 53

   24 body_list: body_list body •
   25          | body •

    END        reduce using rule 24 (body_list)
    END        [reduce using rule 25 (body_list)]
    FUNC_DEF   reduce using rule 24 (body_list)
    FUNC_DEF   [reduce using rule 25 (body_list)]
    FUNC_NAME  reduce using rule 24 (body_list)
    FUNC_NAME  [reduce using rule 25 (body_list)]
    ECHOF      reduce using rule 24 (body_list)
    ECHOF      [reduce using rule 25 (body_list)]
    PRINTRF    reduce using rule 24 (body_list)
    PRINTRF    [reduce using rule 25 (body_list)]
    RETURN     reduce using rule 24 (body_list)
    RETURN     [reduce using rule 25 (body_list)]
    FOR        reduce using rule 24 (body_list)
    FOR        [reduce using rule 25 (body_list)]
    WHILE      reduce using rule 24 (body_list)
    WHILE      [reduce using rule 25 (body_list)]
    IF         reduce using rule 24 (body_list)
    IF         [reduce using rule 25 (body_list)]
    NUMBER     reduce using rule 24 (body_list)
    NUMBER     [reduce using rule 25 (body_list)]
    FLOAT_NUM  reduce using rule 24 (body_list)
    FLOAT_NUM  [reduce using rule 25 (body_list)]
    ID         reduce using rule 24 (body_list)
    ID         [reduce using rule 25 (body_list)]
    STR        reduce using rule 24 (body_list)
    STR        [reduce using rule 25 (body_list)]
    INT        reduce using rule 24 (body_list)
    INT        [reduce using rule 25 (body_list)]
    FLOAT      reduce using rule 24 (body_list)
    FLOAT      [reduce using rule 25 (body_list)]
    STRING     reduce using rule 24 (body_list)
    STRING     [reduce using rule 25 (body_list)]
    BOOL       reduce using rule 24 (body_list)
    BOOL       [reduce using rule 25 (body_list)]
    NEW_LINE   reduce using rule 24 (body_list)
    NEW_LINE   [reduce using rule 25 (body_list)]
    SPACE      reduce using rule 24 (body_list)
    SPACE      [reduce using rule 25 (body_list)]
    '}'        reduce using rule 24 (body_list)
    '}'        [reduce using rule 25 (body_list)]
    $default   reduce using rule 24 (body_list)


State 54

    9 body: statement ';' •

    $default  reduce using rule 9 (body)


State 55

   47 expression: expression ADD • expression

    FUNC_NAME  shift, and go to state 7
    NUMBER     shift, and go to state 13
    FLOAT_NUM  shift, and go to state 14
    ID         shift, and go to state 64
    STR        shift, and go to state 16

    expression     go to state 74
    value          go to state 32
    function_call  go to state 33


State 56

   48 expression: expression SUBTRACT • expression

    FUNC_NAME  shift, and go to state 7
    NUMBER     shift, and go to state 13
    FLOAT_NUM  shift, and go to state 14
    ID         shift, and go to state 64
    STR        shift, and go to state 16

    expression     go to state 75
    value          go to state 32
    function_call  go to state 33


State 57

   50 expression: expression DIVIDE • expression

    FUNC_NAME  shift, and go to state 7
    NUMBER     shift, and go to state 13
    FLOAT_NUM  shift, and go to state 14
    ID         shift, and go to state 64
    STR        shift, and go to state 16

    expression     go to state 76
    value          go to state 32
    function_call  go to state 33


State 58

   49 expression: expression MULTIPLY • expression

    FUNC_NAME  shift, and go to state 7
    NUMBER     shift, and go to state 13
    FLOAT_NUM  shift, and go to state 14
    ID         shift, and go to state 64
    STR        shift, and go to state 16

    expression     go to state 77
    value          go to state 32
    function_call  go to state 33


State 59

   67 function: FUNC_DEF FUNC_NAME $@11 • '(' param_list_opt ')' return_type_opt '{' body return '}'

    '('  shift, and go to state 78


State 60

   77 param: datatype • ID

    ID  shift, and go to state 79


State 61

   65 function_call: FUNC_NAME '(' param_list_opt • ')'

    ')'  shift, and go to state 80


State 62

   73 param_list_opt: param_list •
   75 param_list: param_list • ',' param

    ','  shift, and go to state 81

    $default  reduce using rule 73 (param_list_opt)


State 63

   76 param_list: param •

    $default  reduce using rule 76 (param_list)


State 64

   61 value: ID •

    $default  reduce using rule 61 (value)


State 65

   63 multi_value: value • ',' multi_value
   64            | value •

    ','  shift, and go to state 82

    $default  reduce using rule 64 (multi_value)


State 66

   20 body: ECHOF $@6 multi_value • ';'

    ';'  shift, and go to state 83


State 67

   18 body: PRINTRF $@5 value • ';'

    ';'  shift, and go to state 84


State 68

   11 body: FOR $@2 '(' • statement ';' condition ';' statement ')' '{' body '}'

    FUNC_NAME  shift, and go to state 7
    NUMBER     shift, and go to state 13
    FLOAT_NUM  shift, and go to state 14
    ID         shift, and go to state 15
    STR        shift, and go to state 16
    INT        shift, and go to state 17
    FLOAT      shift, and go to state 18
    STRING     shift, and go to state 19
    BOOL       shift, and go to state 20

    datatype              go to state 24
    statement             go to state 85
    expression_statement  go to state 28
    declaration           go to state 29
    assignment            go to state 30
    expression            go to state 31
    value                 go to state 32
    function_call         go to state 33


State 69

   13 body: WHILE $@3 '(' • condition ')' '{' body '}'

    FUNC_NAME  shift, and go to state 7
    TRUE       shift, and go to state 86
    FALSE      shift, and go to state 87
    NUMBER     shift, and go to state 13
    FLOAT_NUM  shift, and go to state 14
    ID         shift, and go to state 64
    STR        shift, and go to state 16

    $default  reduce using rule 34 (condition)

    condition      go to state 88
    value          go to state 89
    function_call  go to state 33


State 70

   15 body: IF $@4 '(' • condition ')' '{' body '}' else

    FUNC_NAME  shift, and go to state 7
    TRUE       shift, and go to state 86
    FALSE      shift, and go to state 87
    NUMBER     shift, and go to state 13
    FLOAT_NUM  shift, and go to state 14
    ID         shift, and go to state 64
    STR        shift, and go to state 16

    $default  reduce using rule 34 (condition)

    condition      go to state 90
    value          go to state 89
    function_call  go to state 33


State 71

   43 assignment: ID $@9 ASSIGN • $@10 expression

    $default  reduce using rule 42 ($@10)

    $@10  go to state 91


State 72

   44 assignment: ID relational_operator expression •
   47 expression: expression • ADD expression
   48           | expression • SUBTRACT expression
   49           | expression • MULTIPLY expression
   50           | expression • DIVIDE expression

    ADD       shift, and go to state 55
    SUBTRACT  shift, and go to state 56
    DIVIDE    shift, and go to state 57
    MULTIPLY  shift, and go to state 58

    $default  reduce using rule 44 (assignment)


State 73

   40 declaration: datatype ID $@8 • init ';'

    ASSIGN  shift, and go to state 92

    $default  reduce using rule 46 (init)

    init  go to state 93


State 74

   47 expression: expression • ADD expression
   47           | expression ADD expression •
   48           | expression • SUBTRACT expression
   49           | expression • MULTIPLY expression
   50           | expression • DIVIDE expression

    DIVIDE    shift, and go to state 57
    MULTIPLY  shift, and go to state 58

    $default  reduce using rule 47 (expression)


State 75
